using System;
using System.Collections.Generic;
using System.Linq;
using System.Linq.Expressions;
using Microsoft.EntityFrameworkCore;

namespace NB.Repository.Common
{
    public class Repository<T> : IRepository<T> where T : class
    {
        protected DbContext _entities;
        protected readonly DbSet<T> _dbset;

        public Repository(DbContext context)
        {
            _entities = context;
            _dbset = context.Set<T>();
        }

        public virtual DbSet<T> DBSet()
        {
            return _dbset;
        }

        public async Task<T?> GetByIdAsync(Guid? id)
        {
            return await _dbset.FindAsync(id);
        }
        public virtual IEnumerable<T> GetAll()
        {
            return _dbset.AsEnumerable<T>();
        }
        public virtual IQueryable<T> GetQueryable()
        {
            //sửa
            return _dbset.AsQueryable<T>().AsNoTracking();
        }

        public IQueryable<T> Where(Expression<Func<T, bool>> predicate)
        {
            return _dbset.Where(predicate);
        }

        public virtual T Add(T entity)
        {
            return _dbset.Add(entity).Entity;
        }

        public virtual T Delete(T entity)
        {
            return _dbset.Remove(entity).Entity;
        }

        public virtual void Update(T entity)
        {
            _entities.Entry(entity).State = EntityState.Modified;

            //var entry = _entities.Entry(entity);

            //// Nếu chưa được tracking thì attach, rồi set Modified
            //if (entry.State == EntityState.Detached)
            //{
            //    _dbset.Attach(entity);
            //}

            //entry.State = EntityState.Modified;
        }

        //Duc Anh 
        //Ham de tranh tracking
        public virtual void UpdateNoTracking(T entity)
        {
            var keyName = _entities.Model.FindEntityType(typeof(T))
                .FindPrimaryKey().Properties.First().Name;

            var local = _dbset.Local.FirstOrDefault(e =>
                _entities.Entry(e).Property(keyName).CurrentValue ==
                _entities.Entry(entity).Property(keyName).CurrentValue);

            if (local != null)
            {
                _entities.Entry(local).State = EntityState.Detached;
            }

            _dbset.Attach(entity);
            _entities.Entry(entity).State = EntityState.Modified;
        }

        public virtual async Task SaveAsync()
        {
            await _entities.SaveChangesAsync();
        }

        public void DeleteRange(IEnumerable<T> entities)
        {
            foreach (var item in entities)
            {
                if (_entities.Entry(item).State == EntityState.Detached)
                {
                    _dbset.Attach(item);
                }
                _dbset.Remove(item);
            }
        }

        public void CreateRange(IEnumerable<T> entities)
        {
            _entities.Set<T>().AddRange(entities);
        }

        public Task<bool> AnyAsync(Expression<Func<T, bool>> predicate)
        {
            return _dbset.AnyAsync(predicate);
        }

        public void Delete(Expression<Func<T, bool>> filter)
        {
            var entities = _dbset.Where(filter);
            _dbset.RemoveRange(entities);
        }

        public IEnumerable<T> FindBy(Expression<Func<T, bool>> predicate)
        {
            IEnumerable<T> query = _dbset.Where(predicate).AsEnumerable();
            return query;
        }

        public async Task<T?> GetByIdAsync(int? id)
        {
            return await _dbset.FindAsync(id);
        }
    }
}
